odstranil jsem KCD2 foto, přidal text do index.html a v ccs vytvořil pravidlo pro všechny p

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ main, article {
     margin: 0 auto;
 }
 
-.narrow-text {
+p {
   max-width: 80vw; /* 80 % šířky viewportu */
   margin: 0 auto;
 }
